# etsy-product-automation

./: .env.example  .gitignore  README.md  pyproject.toml
config/: books.yaml  config.yaml  niches.yaml  templates.yaml
scripts/: __init__.py  explore_taxonomy.py  generate_book_sample.py  generate_sample.py  run_dashboard.py  run_demo.py  setup_oauth.py
src/books/: __init__.py  characters.py  generator.py  illustrator.py  params.py  scenes.py  seo.py  story.py
src/dashboard/: __init__.py  app.py
src/marketing/: __init__.py  bundler.py  mockups.py
src/monitoring/: logger.py  metrics.py
src/pipeline/: __init__.py  orchestrator.py  scheduler.py  state.py
src/planner/: __init__.py  designs.py  generator.py  layout.py  motifs.py  navigation.py  niche_pages.py  niche_themes.py  pages.py  styles.py  widgets.py
src/publisher/: __init__.py  auth.py  currency.py  listing.py  seo.py  uploader.py
src/research/: keywords.py  niche_scorer.py  trends.py
src/storage/: database.py  models.py  repository.py
src/utils/: rate_limiter.py  retry.py
tests/books/: test_generator.py  test_params.py  test_seo.py  test_story.py
tests/dashboard/: conftest.py  test_bundle.py  test_dashboard.py  test_edit_listing.py  test_feedback.py  test_generate_and_approve.py
tests/pipeline/: test_bundler.py  test_design_rotation.py  test_orchestrator_selection.py  test_palette_bundle.py  test_state.py  test_upload_guards.py
tests/planner/: golden_classic.json  test_designs.py  test_expansion_niches.py  test_generator.py  test_golden_classic.py  test_humanize.py  test_lanes.py  (+2 more)
(+15 files in other folders)
