[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etsy-planner-bot"
version = "0.1.0"
description = "Automated Etsy digital planner generation and publishing system"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.0",
    "pytrends>=4.9.0",
    "etsyv3>=0.0.7",
    "requests>=2.31.0",
    "SQLAlchemy>=2.0.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.0",
    "APScheduler>=3.10.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "scripts*"]
